# sert

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
scripts/: build-appstore-app-only.sh  build-appstore-final.sh  build-appstore.sh  build-dmg-notarized.sh  build-with-python.sh  create-appstore-pkg-direct.sh  fix-icons.sh  prepare-python.sh  prepare-python.sh.backup  zip-to-dmg.sh
src/: index.html  main.js  script.js  styles.css
src-tauri/: Cargo.toml  Info.plist  build-embedded-python.sh  build.rs  entitlements-appstore.plist  entitlements-developer-id.plist  entitlements.plist  pyoxidizer.bzl  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python-runtime/3.11/_CodeSignature/: CodeResources
src-tauri/src/: main.rs
src/js/: app-exit.js  app-init.js  dialog-drag-system.js  dialog-utils.js  edit-operations.js  event-listeners.js  extension-manager.js  file-operations.js  font-settings.js  globals.js  ime-handler.js  input-handler.js  keyboard-shortcuts.js  language-switcher.js  line-highlight.js  locales.js  main.js  menu-controller.js  search-replace.js  theme-manager.js  typewriter-mode.js  ui-updater.js  undo-redo.js  whitespace-visualizer.js
src/js/core/: app.js  state.js
src/js/features/: edit-operations.js  editor.js  file-oparations.js  undo-redo.js
src/js/ui/: dialogs.js  menu.js  status.js
src/js/utils/: tauri.js
src/locales/: en.json  fr.json  ja.json
