[package]
name = "sert"
version = "0.1.0"
description = "Simple Editor by Rust and Tauri"
authors = ["Akihiko Ouchi"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "^2.0", features = ["devtools"] }
tauri-plugin-shell = "^2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.22.0", features = ["auto-initialize"] }
tokio = { version = "1", features = ["full"] }
clipboard = "0.5"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2.0"
