[package]
name = "vinsert"
version = "0.1.0"
description = "Vinsert Is New Simple Editor by Rust and Tauri"
authors = ["Akihiko Ouchi"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
# python-build-standalone統合用の依存関係
reqwest = { version = "0.11", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
serde_json = "1.0"

[features]
default = []
embedded-python = []

[dependencies]
tauri = { version = "^2.0", features = ["devtools"] }
tauri-plugin-shell = "^2.0"
tauri-plugin-os = "^2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.22.0", features = ["auto-initialize", "extension-module"] }
pyoxidizer = { version = "0.24" }
tokio = { version = "1", features = ["full"] }
clipboard = "0.5"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-shell = "2.0"
